<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">nexec client</string>
    <string name="action_settings">Settings</string>
    <string name="main_statement">
        Your application requested to run nexec in the following conditions.
        Are you okey?
    </string>
    <string name="host_label">Host</string>
    <string name="port_label">Port</string>
    <string name="positive">Okey</string>
    <string name="negative">Cancel</string>
    <string name="permission">The application requested to read/write:</string>
    <string name="link_statement">
        The application has requested to redirect:
    </string>
</resources>
<!--
vim: tabstop=4 shiftwidth=4 expandtab softtabstop=4
-->
