<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_statement"/>
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stretchColumns="1">
        <TableRow>
            <TextView android:text="@string/host_label"/>
            <TextView android:id="@+id/host" android:typeface="monospace"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/port_label"/>
            <TextView android:id="@+id/port" android:typeface="monospace"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/args_label"/>
            <TextView android:id="@+id/args" android:typeface="monospace"/>
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/ok_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/positive"/>
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/negative"/>
    </LinearLayout>
</LinearLayout>
